Current sequence aligning fixes.

--- a/main/static/main/interface.css
+++ b/main/static/main/interface.css
@@ -42,7 +42,7 @@ body {
 
 #chosen-list {
     margin-top: 5%;
-    margin-left: 3%;
+    margin-left: 5%;
     height: 100%;
     width: 100%;
     overflow: scroll;
